# open-license-server

./: .env  Cargo.toml  README.md
src/: dotenv_handler.rs  main.rs  mysql.rs
src/controller/: activate_product_controller.rs  add_product_controller.rs  check_status_websocket.rs  close_session_controller.rs  default_controller.rs  generate_key_controller.rs  mod.rs
src/models/: session.rs
