[package]
name = "open-license-server"
version = "0.1.0"
authors = ["MathisBurger <handymathis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-cors = "0.3.0"
actix-web-actors = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4", features = ["chrono", "macros", "migrate", "offline", "mysql", "runtime-actix-rustls", "uuid"] }
rand = "0.8.3"
dotenv = "0.15.0"
pwhash = "1.0.0"